Bug 143990 - Multilevel outline numbers not showing
Summary: Multilevel outline numbers not showing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.1 rc
Hardware: All All
: high major
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: bibisected, bisected, regression
: 144182 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-21 13:04 UTC by Patch
Modified: 2021-11-14 06:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Formating image (96.48 KB, image/jpeg)
2021-08-21 13:07 UTC, Patch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patch 2021-08-21 13:04:46 UTC
Description:
Multilevel outline no longer shows the numbering characters when formatted using the Multilevel outline tool bar.

Steps to Reproduce:
1. Open a new or existing LO Writer document
2. Enter line (paragraph) 
3. Format it as a multilevel list using the tool bar and select the predefine example top row, third across
4. Enter a tab to select outline level then type text

Actual Results:
Outline is formatted with indenting and numbering delimiters

Expected Results:
Actual outline level number or letter should also be shown


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Bug persists in 7.2.0.4
Bug not present in 7.1.4.2 or 7.1.5.2
Reported and verified https://ask.libreoffice.org/t/lo-7-2-0-multilevel-outline-numbering-no-longer-works/67188
Comment 1 Patch 2021-08-21 13:07:49 UTC
Created attachment 174459 [details]
Formating image
Comment 2 Patch 2021-08-21 20:21:38 UTC
The bug actually effects all the tool bar multilevel outline formatting options except those using a symbol (no no actual numbering) or the numbering format
1.1 or 1.1.1 or 1.1.1.1 etc
Comment 3 Roman Kuznetsov 2021-08-22 20:29:02 UTC
confirm in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4677345e3695bac158bb04048b4d5c608ed764b4
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

but not in 7.1 => regression

I bibisected it and got a sha for a bad commit:

sha is 9987b518fca1476bd0ce8c86bcf6ac7c81f7b580

https://gerrit.libreoffice.org/c/core/+/118040

https://git.libreoffice.org/core/commit/9987b518fca1476bd0ce8c86bcf6ac7c81f7b580

Added to CC: Thorsten Behrens and Vasily Melenchuk
Comment 4 Commit Notification 2021-08-24 10:17:09 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1fd9116fbcd1a8d25f964087cd1d0eb15df8a2d1

tdf#143990: writer: default value for SetIncludeUpperLevels is 1

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-08-25 05:36:33 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/9eb836a1a5f0f4522337ff7b87c9a0a4c7e8ca57

tdf#143990: writer: default value for SetIncludeUpperLevels is 1

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Roman Kuznetsov 2021-08-25 20:51:51 UTC
verified in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4debb7e8cc12563f46d1aaa58afdcb831f21cc83
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

Vasily, thanks for fixing
Comment 7 Xisco Faulí 2021-08-30 14:09:37 UTC
*** Bug 144182 has been marked as a duplicate of this bug. ***
Comment 8 www.MKRD.info 2021-10-20 01:42:36 UTC
Bug exists in 7.2.1.2 and 7.2.2.2 (just saying that because somewhere it says that "It will be available in 7.2.1.", which is incorrect).
Comment 9 David Gow 2021-10-28 09:36:29 UTC
FYI — I, too, am seeing this in the current (K)Ubuntu libreoffice 7.2.2.2 packages. Alas, I've not had a chance to compare more versions than that, yet.

I've filed a bug with Ubuntu just in case this needed backporting on their end: https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/1949066
Comment 10 phv 2021-11-11 11:16:42 UTC
I cannot reproduce this issue on LibreOffice version 7.2.2.2 and on Windows. The multilevel numbering characters are displayed properly and in the right order.
Comment 11 David Gow 2021-11-14 06:10:50 UTC
This is working for me now, too. I think it just took a while for the fix to filter through the distro updates.