tdf#143990: writer: default value for SetIncludeUpperLevels is 1

Same as in e08fba90 for tdf#143858: zero for SetIncludeUpperLevels
has no practical sense, since actually this value is amount of levels
to display. Default and minimal value is 1 (current level), zero
used only in cases when there should be no numbering.

Change-Id: I303386339a9e13944e11d0287c933523c7410b6b