svx/source/sidebar/nbdtmg.cxx
@@ -848,7 +848,7 @@ void OutlineTypeMgr::ApplyNumRule(SvxNumRule& aNum, sal_uInt16 nIndex, sal_uInt1
             }
         } else
         {
-            aFmt.SetIncludeUpperLevels(sal::static_int_cast< sal_uInt8 >(0 != nUpperLevelOrChar ? aNum.GetLevelCount() : 0));
+            aFmt.SetIncludeUpperLevels(sal::static_int_cast< sal_uInt8 >(0 != nUpperLevelOrChar ? aNum.GetLevelCount() : 1));
             aFmt.SetCharFormatName(GetNumCharFmtName());
             if (isResetSize) aFmt.SetBulletRelSize(100);
         }
